# spoolman-inventree-proxy

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml  docker_publish.yml
.sqlx/: query-04c9ecde1a1bedd50b0ce19f9abb1b1a82b7ec40046fdc7e1ae932ba387a83d8.json  query-5503a2a17b5780c5f8c5c5f8919c107cfffb1813fcb9a8b299840a0d123182c7.json  query-963e30eb00d4298e953536e330e9912248d48f679092171bae9957ed4db76d32.json  query-e3eac25bd3c2471ba035b4d051a543a869e057436ebe9f8d10c07cee1b2c2e9e.json  query-e9c2ca105c1e0ebe40890836d3041d32a3837dda4dedf431546cc1bd1154cb74.json
crates/inventree/: Cargo.toml
crates/inventree/src/: lib.rs
crates/inventree/src/location/: mod.rs
crates/inventree/src/part/: mod.rs  part_list.rs  part_retrieve.rs
crates/inventree/src/part/models/: mod.rs  (+3 more)
crates/inventree/src/stock/: mod.rs  stock_exists.rs  stock_list.rs  stock_remove_create.rs  stock_retrieve.rs
crates/inventree/src/supplier/: mod.rs
crates/settings/: Cargo.toml
crates/settings/src/: lib.rs  parameters.rs  settings.rs
crates/spoolman-api/: Cargo.toml
crates/spoolman-api/src/: context.rs  main.rs
crates/spoolman-api/src/cron/: flush_pending_task.rs  mod.rs
crates/spoolman-api/src/db/: mod.rs  update_pending.rs
crates/spoolman-api/src/routes/: backup.rs  health.rs  info.rs  mod.rs
crates/spoolman-api/src/routes/filament/: get.rs  mod.rs
crates/spoolman-api/src/routes/spool/: find_spool.rs  get.rs  get_spool.rs  mod.rs  use_spool.rs
crates/spoolman-api/src/utils/: mod.rs  part_extension.rs
migrations/: 20250830003507_init.sql
(+1 files in other folders)
