[package]
name = "spoolman-api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
tokio = { version = "1.47.1", features = ["full"] }
log = "0.4.27"
env_logger = "0.11.8"
chrono = {version = "0.4.41", features = ["serde"]}
inventree = { path = "../inventree"}

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
anyhow = "1.0.99"

utoipa = { version = "5.4.0", features = [
    "actix_extras",
    "uuid",
    "chrono",
    "preserve_order",
] }
utoipa-actix-web = "0.1.2"
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }